--- a/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
@@ -29,7 +29,7 @@
         <div class="col-md-9 pt-3 pb-3">
             <h4>Chat tracker Module</h4>
             <p class="mb-0 text-volvox">
-                Decide wheter the chat will be tracked or not
+                Decide whether the chat will be tracked or not
             </p>
         </div>
         <div class="col-md-3 valign">
