--- a/src/Volvox.Helios.Web/Views/Settings/RemembotSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/RemembotSettings.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="col-12 collapse" id="infoCollapse">
             <p>
-                Toggle the radio boxes to enable the Remebot module. With the "Add Reminder" button you can send a custom message to a defined channel of your server. You can also set the message interval in which the message should be send. In order to work properly ensure that the remembot module is activated and the status of the message is active.
+                Toggle the radio boxes to enable the Remembot module. With the "Add Reminder" button you can send a custom message to a defined channel of your server. You can also set the message interval in which the message should be send. In order to work properly ensure that the remembot module is activated and the status of the message is active.
             </p>
         </div>
     </div>
