--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -134,7 +134,7 @@
                     <div class="col-12 pt-3 pb-3">
                         <h4>Whitelist</h4>
                         <p class="mb-0 text-volvox">
-                            Add Roles to the blacklist
+                            Add roles to the whitelist
                         </p>
                         <select asp-for="WhiteListedRoleIds" class="d-none blacklist-items" multiple></select>
                         <div id="blacklistTagBox" class="mt-3" style="overflow: hidden;"></div>
