- removed graphs from dashboard - fixed role id value on initialized - added dad module to about page

--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -70,6 +70,10 @@
         <p>
             Add messages to be sent a intervals you define. Guild member always late for raids? Set a reminder message that pings them in the evening on every Tuesday. Are you manually creating sign up messages every morning? Now there's a bot for that!
         </p>
+        <h4 class="text-volvox underline-left mt-4">Dad</h4>
+        <p>
+            Unleash the "dad" on your server. Messages that start with "I'm" will be met with a dad-like response.
+        </p>
     </div>
 
 </div>
