--- a/src/Volvox.Helios.Web/Views/Moderation/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/Index.cshtml
@@ -1,11 +1,64 @@
 ﻿@{
     ViewData["Title"] = "Moderation Settings";
 }
-<h2>@ViewData["Title"]</h2>
-<hr>
 
-<a class="btn btn-success" asp-controller="Moderation" asp-action="punishments"> Manage Punishment Tiers <i class="fas fa-arrow-right" style="margin-left:1em;"></i></a>
-<br />
-<a class="btn btn-success" asp-controller="Moderation" asp-action="general"> Manage Filters <i class="fas fa-arrow-right" style="margin-left:1em;"></i></a>
-<br />
-<a class="btn btn-success" asp-controller="Moderation" asp-action="users"> Manage Users <i class="fas fa-arrow-right" style="margin-left:1em;"></i></a>
+<div class="col-12 breadcrumb-wrapper">
+    <nav aria-label="breadcrumb" class="container">
+        <ol class="breadcrumb mb-0">
+            <li class="breadcrumb-item"><a asp-controller="Settings" asp-action="Index" class="text-volvox">Back to settings</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Moderation</li>
+        </ol>
+    </nav>
+</div>
+
+<div class="container mt-4">
+    <h2>@ViewData["Title"]</h2>
+    <hr>
+
+    <div class="col-12">
+        <div class="row module-input-wrapper rounded sliding-border">
+            <div class="col-md-9 col-10 pt-3 pb-3">
+                <h4 class="mb-0">Information and Instructions</h4>
+            </div>
+            <div class="col-md-3 col-2 valign">
+                <div class="btn-group material-btn-group ml-auto">
+                    <a href="#infoCollapse" class="info-btn" data-toggle="collapse" data-animation="sliding-border" role="button" aria-expanded="false" aria-controls="infoCollapse">
+                        <i class="fas fa-info-circle"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 collapse" id="infoCollapse">
+                <p>
+                    Enable this module to moderate your server. Use the Punishment tiers to edit and create new punishment tiers. You can select by three different punishment types: Kick, Ban and Role add.
+                </p>
+                <p>
+                    Filtermanagement is used to filter banned links and words. You can set the expire date and whitelist by specific channels and roles.
+                </p>
+                <p>
+                    The users page is used to manage the current warnings and punishments for a user. You can remove warnings / punishments from here as well.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <a class="btn btn-volvox-outline w-100 mt-3" asp-controller="Moderation" asp-action="punishments">Manage Punishment Tiers</a>
+        </div>
+        <div class="col-md-4">
+            <a class="btn btn-volvox-outline w-100 mt-3" asp-controller="Moderation" asp-action="general">Manage Filters</a>
+        </div>
+        <div class="col-md-4">
+            <a class="btn btn-volvox-outline w-100 mt-3" asp-controller="Moderation" asp-action="users">Manage Users</a>
+        </div>
+    </div>
+
+</div>
+
+@section Scripts{
+    <script>
+        $('main').removeClass('container').addClass('p-0 mt-0');
+
+
+    </script>
+}
