--- a/src/Volvox.Helios.Web/wwwroot/css/site.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/site.css
@@ -571,17 +571,13 @@ input:checked + .slider {
 
 
 
-.user-list .btn-prev, .user-list .btn-next{
+.user-list .btn-prev, .user-list .btn-next, .user-list .btn-page {
   border: 1px solid var(--color-volvox);
   padding: 5px 10px;
   border-radius: 4px;
 }
-.user-list .btn-prev{
-  float: left;
-}
-
-.user-list .btn-next{
-  float: right;
+.user-list .btn-page:hover {
+  color: white;
 }
 
 /*******Cookie consent*****/
