fixed merge errors added username to user pagee

--- a/src/Volvox.Helios.Web/Views/Moderation/User.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/User.cshtml
@@ -8,7 +8,7 @@
         <ol class="breadcrumb mb-0">
             <li class="breadcrumb-item"><a asp-controller="Moderation" asp-action="Index" class="text-volvox">Moderation</a></li>
             <li class="breadcrumb-item"><a asp-controller="Moderation" asp-action="Users" class="text-volvox">Users</a></li>
-            <li class="breadcrumb-item active" aria-current="page">User</li>
+            <li class="breadcrumb-item active" aria-current="page">@Model.Username</li>
         </ol>
     </nav>
 </div>
