--- a/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
@@ -18,7 +18,7 @@
 <div class="row">
 
     <div class="col-12">
-        <div class="row border border-gray2 rounded sliding-border ml-0 mr-0">
+        <div class="row rounded sliding-border module-input-wrapper mr-0 ml-0">
             <div class="col-md-9 col-10 pt-3 pb-3">
                 <h4 class="mb-0">Information and Instructions</h4>
             </div>
