--- a/src/Volvox.Helios.Web/Views/Poll/NewPoll.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/NewPoll.cshtml
@@ -43,7 +43,7 @@
                 <div class="row mt-4">
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="ml-auto">
-                        <button type="submit" class="btn btn-volvox-outline pr-4 pl-4" style="border-radius:20px;">Save</button>
+                        <button type="submit" class="btn btn-volvox-outline save-btn">Save</button>
                     </div>
                 </div>
             </div>
