--- a/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
+++ b/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
@@ -23,7 +23,7 @@
 
 <hr />
 <form asp-action="EditRecurringReminder" class="col-12">
-    <div class="row border border-gray2 rounded">
+    <div class="row rounded module-input-wrapper">
         <div class="col-md-9 pt-3 pb-3">
             <h4>Reminder enabled</h4>
             <p class="mb-0 text-volvox">
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-    <div class="row border border-gray2 rounded mt-4">
+    <div class="row module-input-wrapper rounded mt-4">
         <div class="col-12 pt-3 pb-3">
             <label asp-for="ChannelId"></label>
             <input type="hidden" name="ChannelId" />
@@ -77,14 +77,14 @@
         
     <div class="row mt-4">
         <div>
-            <a asp-action="RemembotSettings" asp-controller="Settings" class="btn btn-volvox-outline pr-4 pl-4" style="border-radius:20px;">Back to List</a>
+            <a asp-action="RemembotSettings" asp-controller="Settings" class="btn btn-volvox-outline save-btn">Back to List</a>
         </div>
         <div class="ml-auto">
             @if (Model.Id != default(long))
             {
-                <button type="button" id="deleteBtn" class="btn btn-danger pr-4 pl-4 mr-2" style="border-radius:20px;">Delete Reminder</button>
+                <button type="button" id="deleteBtn" class="btn btn-danger save-btn mr-2">Delete Reminder</button>
             }
-            <button type="submit" class="btn btn-volvox-outline pr-4 pl-4" style="border-radius:20px;">Save Reminder</button>
+            <button type="submit" class="btn btn-volvox-outline save-btn">Save Reminder</button>
         </div>
     </div>
     <div class="form-group" style="display:none">
