--- a/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
@@ -7,7 +7,7 @@
 <hr>
 <form method="post" class="col-12">
 
-    <div class="row border border-gray2 rounded sliding-border">
+    <div class="row module-input-wrapper rounded sliding-border">
         <div class="col-md-9 col-10 pt-3 pb-3">
             <h4 class="mb-0">Information and Instructions</h4>
         </div>
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="row border border-gray2 rounded mt-4">
+    <div class="row module-input-wrapper rounded mt-4">
         <div class="col-md-9 pt-3 pb-3">
             <h4>Chat tracker Module</h4>
             <p class="mb-0 text-volvox">
