--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -11,7 +11,7 @@
         <form method="post">
             <div class="col-12">
 
-                <div class="row border border-gray2 rounded sliding-border">
+                <div class="row rounded module-input-wrapper sliding-border">
                     <div class="col-md-9 col-10 pt-3 pb-3">
                         <h4 class="mb-0">Information and Instructions</h4>
                     </div>
@@ -35,8 +35,7 @@
                     </div>
                 </div>
 
-                <div class="row border border-gray2 rounded mt-4">
-                <div class="row rounded module-input-wrapper">
+                <div class="row mt-4 rounded module-input-wrapper">
                     <div class="col-md-9 pt-3 pb-3">
                         <h4>Streamer Module</h4>
                         <p class="mb-0 text-volvox">
@@ -55,39 +54,6 @@
                             </label>
                         </div>
                     </div>
-
-                    @*<div class="col-12">
-                            <div asp-validation-summary="All" class="text-danger"></div>
-                            <input type="hidden" name="ChannelId" />
-                            <h4>Stream Announcer</h4>
-                            <div class="form-group">
-                                <label asp-for="ChannelId"></label>
-                                <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
-                                <span asp-validation-for="ChannelId" class="text-danger"></span>
-                            </div>
-                            <div class="form-check form-group">
-                                <input asp-for="ChannelSettings.Enabled" class="form-check-input" />
-                                <label asp-for="ChannelSettings.Enabled" class="form-check-label"></label>
-                                <span asp-validation-for="ChannelSettings.Enabled" class="text-danger"></span>
-                            </div>
-                            <div class="form-check form-group">
-                                <input asp-for="ChannelSettings.RemoveMessages" class="form-check-input" />
-                                <label asp-for="ChannelSettings.RemoveMessages" class="form-check-label"></label>
-                                <span asp-validation-for="ChannelSettings.RemoveMessages" class="text-danger"></span>
-                            </div>
-
-                            <h4 class="mt-4">Streamer Role</h4>
-                            <div class="form-check form-group">
-                                <input asp-for="StreamerRoleEnabled" class="form-check-input" />
-                                <label asp-for="StreamerRoleEnabled" class="form-check-label"></label>
-                                <span asp-validation-for="StreamerRoleEnabled" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="RoleId"></label>
-                                <select asp-for="RoleId" asp-items="Model.Roles" id="roles" class="form-control"></select>
-                                <span asp-validation-for="RoleId" class="text-danger"></span>
-                            </div>
-                        </div>*@
                 </div>
 
                 <div class="row mt-4 rounded module-input-wrapper">
@@ -170,14 +136,14 @@
                     </div>
                 </div>
 
-                <div class="row border border-gray2 rounded mt-4">
+                <div class="row rounded module-input-wrapper mt-4">
                     <div class="col-12 pt-3 pb-3">
                         <h4>Whitelist</h4>
                         <p class="mb-0 text-volvox">
                             Add roles to the whitelist
                         </p>
-                        <select asp-for="WhiteListedRoleIds" class="d-none blacklist-items" multiple></select>
-                        <div id="blacklistTagBox" class="mt-3" style="overflow: hidden;"></div>
+                        <select asp-for="WhiteListedRoleIds" class="d-none whitelist-items" multiple></select>
+                        <div id="whiteListTagBox" class="mt-3" style="overflow: hidden;"></div>
                     </div>
                 </div>
 
@@ -286,7 +252,7 @@
                 Model.WhiteListedRoleIds = new List<ulong>();
             }
         }
-        $('#blacklistTagBox').dxTagBox({
+        $('#whiteListTagBox').dxTagBox({
             dataSource: roles,
             valueExpr: "value",
             displayExpr: "text",
@@ -298,11 +264,11 @@
             }),
             onInitialized: (e) => {
                 setTimeout(() => {
-                    $('.blacklist-items').append($('.dx-dropdowneditor-input-wrapper').find('select option'));
+                    $('.whitelist-items').append($('.dx-dropdowneditor-input-wrapper').find('select option'));
                 }, 500)
             },
             onValueChanged: (e) => {
-                $('.blacklist-items').empty().append($('.dx-dropdowneditor-input-wrapper').find('select option'));
+                $('.whitelist-items').empty().append($('.dx-dropdowneditor-input-wrapper').find('select option'));
             }
         });
     </script>
