--- a/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
@@ -19,7 +19,9 @@
             Settings
         </a>
         <div class="dropdown-menu" aria-labelledby="settingsNavDropdown" id="settingsDropDown">
-            <div class="dropdown-item">Loading...</div>
+            <div class="dropdown-item p-0">
+                <div class="lazy-loader"></div>
+            </div>
         </div>
     </li>
 
@@ -28,7 +30,9 @@
             Analytics
         </a>
         <div class="dropdown-menu" aria-labelledby="analyticsNavDropdown" id="analyticsDropDown">
-            <div class="dropdown-item">Loading...</div>
+            <div class="dropdown-item p-0">
+                <div class="lazy-loader"></div>
+            </div>
         </div>
     </li>
 }
