Created controllers and stub views for module

--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -63,4 +63,24 @@
             <div class="w-100 module-enabled-popover skyblue-popover module-version" style="height: 4px;">&nbsp;</div>
         </div>
     </div>
+
+    <div class="col-md-6 mt-4">
+        <div class="card h-100 border-skyblue">
+            <div class="w-100 module-enabled-popover skyblue-popover module-version">
+                Reaction Role Manager
+            </div>
+            <div class="w-100 bg-skyblue module-enabled-popover">
+                <strong>@Model.ReactionRolePostCount Posts</strong>
+            </div>
+            <div class="card-body pt-4 pb-4">
+                <h5 class="card-title mb-0">
+                    <a style="color: black" class="float-right" asp-action="ReactionRolesSettings">
+                        <i class="fas fa-cog text-skyblue"></i>
+                    </a>
+                </h5>
+                <p class="card-text mr-4">Create reaction role posts where users can auto-assign roles.</p>
+            </div>
+            <div class="w-100 module-enabled-popover skyblue-popover module-version" style="height: 4px;">&nbsp;</div>
+        </div>
+    </div>
 </div>
