--- a/src/Volvox.Helios.Web/Views/Settings/ReactionRolesSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/ReactionRolesSettings.cshtml
@@ -1,7 +1,58 @@
 ﻿@model Volvox.Helios.Web.ViewModels.Settings.ReactionRoleSettingsViewModel
 @{
-    ViewData["Title"] = "ReactionRolesSettings";
+    ViewData["Title"] = "Reaction Roles Settings";
 }
 
-<h2>ReactionRolesSettings</h2>
-@Model.Enabled
+<h2>@ViewData["Title"]</h2>
+<hr>
+
+<div class="row">
+    <div class="col-12 mt-4">
+        <div class="row mb-4">
+            <div class="col-md-9">
+                <h3>Reaction Role Posts</h3>
+            </div>
+            <div class="col-md-3">
+                <a asp-controller="ReactionRoles" asp-action="edit" class="btn btn-primary d-block">Add Reaction Role Post</a>
+            </div>
+        </div>
+
+        @if (Model.ReactionRolesMessages != null && Model.ReactionRolesMessages.Any())
+        {
+            <table class="table table-striped table-responsive">
+                <colgroup>
+                    <col />
+                    <col width="100%" />
+                    <col />
+                    <col />
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>Channel</th>
+                        <th>Title</th>
+                        <th>Edit</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var reminder in Model.ReactionRolesMessages)
+                    {
+                        <tr>
+                            <td><span class="badge badge-secondary">#@reminder.ChannelName</span></td>
+                            <td id="message">@reminder.Title</td>
+
+                            <td>
+                                <a class="text-volvox"
+                                   asp-controller="ReactionRoles"
+                                   asp-action="edit"
+                                   asp-route-guildId="@Model.GuildId"
+                                   asp-route-reactionRoleMessageId="@reminder.Id">
+                                    <i class="fas fa-pen"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+    </div>
+</div>
